--- a/public/assets/scss/_blog.scss
+++ b/public/assets/scss/_blog.scss
@@ -298,7 +298,7 @@ blockquote {
             height: 50px;
             width: 50px;
             line-height: 50px;
-            background: #0167F3;
+            background: #05B710;
             border-radius: 50%;
             display: inline-block;
 
