--- a/public/assets/scss/_variables.scss
+++ b/public/assets/scss/_variables.scss
@@ -7,12 +7,12 @@ sans-serif;
 
 // Colors ---------------
 $white: #fff;
-$black: #081828;
+$black: #047711;
 $gray: #f9f9f9;
 
 
 // Theme Color
-$theme-color: #0167F3;
+$theme-color: #05B710;
 
 $border-color: #F4EEFB;
 
@@ -21,7 +21,7 @@ $body-color: #888;
 
 
 // Heading Color
-$heading-color: #081828;
+$heading-color: #047711;
 
 //Border Radius
 $borderRadius:10px;
